# yadex

./: .gitignore  GNUmakefile  Makefile.am  README.md  configure  configure.ac  yadex.cfg
atclib/: Makefile.am
docsrc/: Makefile.am
src/: Makefile.am  _edit.h  cfgfile.cc  editloop.cc  help2.cc  objects.cc  pic2img.cc  r_render.cc  r_render.h  yadex.cc  yadex.h
ygd/: Makefile.am
