noinst_LIBRARIES = libatc.a

libatc_a_SOURCES = \
	al_adigits.c \
	al_aerrno.c \
	al_astrerror.c \
	al_fana.c \
	al_fnature.c \
	al_lateol.c \
	al_lcount.c \
	al_lcreate.c \
	al_ldelete.c \
	al_ldiscard.c \
	al_lgetpos.c \
	al_linsert.c \
	al_linsertl.c \
	al_llength.c \
	al_lpeek.c \
	al_lpeekl.c \
	al_lpoke.c \
	al_lpokel.c \
	al_lptr.c \
	al_lread.c \
	al_lreadl.c \
	al_lrewind.c \
	al_lseek.c \
	al_lsetpos.c \
	al_lstep.c \
	al_ltell.c \
	al_lwrite.c \
	al_lwritel.c \
	al_sapc.c \
	al_saps.c \
	al_scps.c \
	al_scpslower.c \
	al_sdup.c \
	al_sisnum.c \
	al_strolc.c \
	atclib.h

