# man page
dist_man6_MANS = yadex.6

# html documentation
dist_doc_DATA = 002f2f.png README deu_diffs.html getting_started.html logo.png nook2.png slice2.png vsprite.png \
		E1.png README.doc e1.png hackers_guide.html logo_small.png packagers_guide.html tips.html vtexture.png \
		E2.png advanced.html e2.png help.html mirror0.png palette.html trivia.html wad_specs.html \
		contact.html editing_docs.html index.html mirrorh.png preview.html trouble.html copyright faq.html \
		keeping_up.html mirrorv.png reporting.html users_guide.html yadex1.png credits.html feedback.html \
		legal.html nook1.png slice1.png vflat.png ygd.html
