AM_CPPFLAGS = -I$(top_srcdir) -I$(top_srcdir)/atclib -I$(top_srcdir)/boost -std=c++03
LDADD = ../config.o ../atclib/libatc.a

bin_PROGRAMS = yadex

yadex_SOURCES = \
	_edit.h \
	acolours.cc \
	acolours.h \
	aym.cc \
	aym.h \
	bench.cc \
	bench.h \
	bitvec.cc \
	bitvec.h \
	cfgfile.cc \
	cfgfile.h \
	checks.cc \
	checks.h \
	colour.h \
	colour1.cc \
	colour2.cc \
	colour3.cc \
	colour4.cc \
	credits.cc \
	credits.h \
	dependcy.cc \
	dependcy.h \
	dialog.cc \
	dialog.h \
	disppic.cc \
	disppic.h \
	drawmap.cc \
	drawmap.h \
	edisplay.cc \
	edisplay.h \
	editgrid.cc \
	editgrid.h \
	editlev.cc \
	editlev.h \
	editloop.cc \
	editloop.h \
	editobj.cc \
	editobj.h \
	editsave.cc \
	editsave.h \
	editzoom.cc \
	editzoom.h \
	edwidget.h \
	endian.cc \
	endian.h \
	entry.cc \
	entry.h \
	entry2.cc \
	entry2.h \
	events.cc \
	events.h \
	flats.cc \
	flats.h \
	game.cc \
	game.h \
	gamedef.h \
	gamesky.h \
	gcolour1.cc \
	gcolour1.h \
	gcolour2.cc \
	gcolour2.h \
	gcolour3.cc \
	gcolour3.h \
	geom.cc \
	gfx.cc \
	gfx.h \
	gfx2.cc \
	gfx2.h \
	gfx3.cc \
	gfx3.h \
	gotoobj.cc \
	gotoobj.h \
	help1.cc \
	help1.h \
	help2.cc \
	help2.h \
	highlt.cc \
	highlt.h \
	img.cc \
	img.h \
	imgscale.cc \
	imgscale.h \
	imgspect.cc \
	imgspect.h \
	infobar.cc \
	infobar.h \
	input.cc \
	input.h \
	l_align.cc \
	l_centre.cc \
	l_centre.h \
	l_flags.cc \
	l_flags.h \
	l_misc.cc \
	l_prop.cc \
	l_super.h \
	l_unlink.cc \
	l_vertices.cc \
	l_vertices.h \
	levels.cc \
	levels.h \
	lists.cc \
	lists.h \
	locate.cc \
	locate.h \
	lumpdir.cc \
	lumpdir.h \
	macro.cc \
	macro.h \
	masterdir.h \
	memory.cc \
	menu.cc \
	menu.h \
	menubar.cc \
	menubar.h \
	menudata.h \
	mkpalette.cc \
	mkpalette.h \
	modpopup.h \
	mouse.cc \
	names.cc \
	nop.cc \
	objects.cc \
	objects.h \
	objid.h \
	objinfo.cc \
	objinfo.h \
	oldmenus.cc \
	oldmenus.h \
	palview.cc \
	palview.h \
	patchdir.cc \
	patchdir.h \
	pic2img.cc \
	pic2img.h \
	prefer.cc \
	prefer.h \
	r_images.cc \
	r_images.h \
	r_render.cc \
	r_render.h \
	record.h \
	rgb.h \
	rgbbmp.h \
	s_centre.cc \
	s_centre.h \
	s_door.cc \
	s_lift.cc \
	s_linedefs.cc \
	s_linedefs.h \
	s_merge.cc \
	s_misc.cc \
	s_prop.cc \
	s_slice.cc \
	s_slice.h \
	s_split.cc \
	s_swapf.cc \
	s_swapf.h \
	s_vertices.cc \
	s_vertices.h \
	sanity.cc \
	sanity.h \
	scrnshot.cc \
	selbox.cc \
	selbox.h \
	selectn.cc \
	selectn.h \
	selpath.cc \
	selpath.h \
	selrect.cc \
	serialnum.cc \
	serialnum.h \
	spot.h \
	spritdir.cc \
	spritdir.h \
	sticker.cc \
	sticker.h \
	swapmem.cc \
	t_centre.cc \
	t_centre.h \
	t_flags.cc \
	t_flags.h \
	t_prop.cc \
	t_spin.cc \
	t_spin.h \
	textures.cc \
	textures.h \
	things.cc \
	things.h \
	trace.cc \
	trace.h \
	v_centre.cc \
	v_centre.h \
	v_merge.cc \
	v_polyg.cc \
	vectext.cc \
	vectext.h \
	verbmsg.cc \
	wadfile.cc \
	wadfile.h \
	wadlist.cc \
	wadlist.h \
	wadname.h \
	wadnamec.cc \
	wadnamec.h \
	wadres.cc \
	wadres.h \
	wads.cc \
	wads.h \
	wads2.cc \
	wads2.h \
	warn.cc \
	windim.cc \
	windim.h \
	wstructs.h \
	x11.cc \
	x11.h \
	x_centre.cc \
	x_centre.h \
	x_exchng.cc \
	x_exchng.h \
	x_hover.cc \
	x_hover.h \
	x_mirror.cc \
	x_mirror.h \
	x_rotate.cc \
	x_rotate.h \
	xref.cc \
	xref.h \
	yadex.cc \
	yadex.h \
	yerror.h \
	ymemory.h \
	ytime.cc \
	ytime.h

